<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFilmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow_back"
            android:paddingStart="6dp"
            android:paddingTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingTop="12dp"
            android:text="@string/movies"
            app:layout_constraintStart_toEndOf="@id/arrow_back"
            app:layout_constraintTop_toTopOf="@id/arrow_back" />

        <ImageView
            android:id="@+id/posterView"

            android:layout_width="230dp"
            android:layout_height="315dp"
            android:contentDescription="@string/filmPoster"
            android:paddingStart="6dp"
            android:paddingTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arrow_back"
            app:srcCompat="@drawable/placeholder_film" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/movies"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/filmRating"
            app:layout_constraintStart_toEndOf="@id/posterView"
            app:layout_constraintTop_toTopOf="@id/posterView" />

        <TextView
            android:id="@+id/filmRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/rating"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movieName"
            app:layout_constraintTop_toTopOf="@id/posterView" />

        <Button
            android:id="@+id/isFromWatchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_watchlist"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@id/watchTrailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/posterView"
            app:layout_constraintTop_toBottomOf="@id/movieName" />

        <Button
            android:id="@+id/watchTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_trailer"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@id/posterView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/posterView"
            app:layout_constraintTop_toBottomOf="@id/isFromWatchList" />

        <TextView
            android:id="@+id/shortDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/short_description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintEnd_toEndOf="@id/posterView"
            app:layout_constraintStart_toStartOf="@id/posterView"
            app:layout_constraintTop_toBottomOf="@id/posterView" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingStart="12dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/posterView"
            app:layout_constraintTop_toBottomOf="@id/shortDescription" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/details"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/genreTitle"
            app:layout_constraintEnd_toEndOf="@id/posterView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/genreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/posterView"
            app:layout_constraintStart_toStartOf="@id/posterView"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/genreTitle"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <TextView
            android:id="@+id/releasedDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/released_date"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/posterView"
            app:layout_constraintStart_toStartOf="@id/posterView"
            app:layout_constraintTop_toBottomOf="@id/genreTitle" />

        <TextView
            android:id="@+id/releasedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/released_date"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/releasedDateTitle"
            app:layout_constraintTop_toBottomOf="@id/genreTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>