<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/posterView"
            android:layout_width="190dp"
            android:layout_height="260dp"
            android:contentDescription="@string/filmPoster"
            app:srcCompat="@drawable/placeholder_film" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameWithYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingTop="40dp"
                android:text="@string/nameWithYear"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/durationWithGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/grey"
                android:paddingBottom="40dp"
                android:text="@string/durationWithGenre" />

            <TextView
                android:visibility="gone"
                android:id="@+id/isInWishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/on_my_watchlist" />


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>